feat : apply spring boot best practices (#1395)
* feat : apply spring boot best practices

* fix : failures

* fix : build issues

* removes deadcode

* removes dead code